--- a/.github/workflows/run_ergo.yml
+++ b/.github/workflows/run_ergo.yml
@@ -4,6 +4,10 @@ on:
   schedule:
     - cron: '0 11 * * *'
 
+  pull_request:
+    branches:
+      - main
+
   workflow_dispatch:
 
 jobs:
@@ -27,6 +31,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: Chowdhury-DSP/ergo
+        ref: chowkick-tests # Reset to main branch before merging
         path: ergo
         token: ${{ secrets.OUR_GITHUB_PAT }}
     
