--- a/.github/workflows/run_ergo.yml
+++ b/.github/workflows/run_ergo.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: Chowdhury-DSP/ergo
-        ref: chowkick-tests # Reset to main branch before merging
+        ref: main
         path: ergo
         token: ${{ secrets.OUR_GITHUB_PAT }}
     
